[package]
name = "horse-races"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]
description = "A game about horse racing, where the winning horse is determined with random by an oracle."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
randomness-oracle-io = { path = "../randomness-oracle-io" }
ft-io = { git = "https://github.com/gear-dapps/fungible-token.git", tag = "0.1.0" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }