[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
async-trait = "0.1.61"
oracle-io = { path = "../io" }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
oracle-io = { path = "../io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []